Updates through Chapter 8

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,4 +18,17 @@ Depends:
   learnr,
   gradethis,
   webshot,
+  tidyverse,
+  corrgram,
+  shiny,
+  xfun,
+  htmltools,
+  gganimate,
+  gifski,
+  ggthemes,
+  ggdag,
+  marginaleffects, 
+  car, 
+  multcomp,
+  lmtest,
   gtsummary
